--- a/package.json
+++ b/package.json
@@ -2,18 +2,39 @@
   "name": "LernApp",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor run --exclude-archs web.browser.legacy",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "katex": "^0.13.11",
+    "markdown-it": "^12.0.6",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-anchor": "^7.1.0",
+    "markdown-it-custom-block": "^0.1.2",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "meteor-node-stubs": "^1.0.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-ace": "^9.4.1",
+    "react-dom": "^16.13.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "uniforms": "^3.5.1",
+    "uniforms-bridge-simple-schema-2": "^3.5.1"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.0.2",
+    "@types/markdown-it-emoji": "^2.0.1",
     "@types/meteor": "^1.4.49",
     "@types/mocha": "^8.0.3",
     "@types/react": "^16.9.49",
