--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "scripts": {
     "start": "meteor run --exclude-archs web.browser.legacy",
-    "test": "meteor test --once --driver-package meteortesting:mocha",
+    "test": "meteor test --once --port 3003 --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "classnames": "^2.3.1",
     "katex": "^0.13.11",
     "markdown-it": "^12.0.6",
     "markdown-it-abbr": "^1.0.4",
@@ -27,6 +28,7 @@
     "react": "^16.13.1",
     "react-ace": "^9.4.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "uniforms": "^3.5.1",
