--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-ace": "^9.4.1",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
+    "react-use": "^17.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "simpl-schema": "^1.12.0",
