--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#35fde2",
-        "activityBar.activeBorder": "#e861fd",
-        "activityBar.background": "#35fde2",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#e861fd",
-        "activityBarBadge.foreground": "#15202b",
-        "statusBar.background": "#03fcdb",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#02caaf",
-        "titleBar.activeBackground": "#03fcdb",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#03fcdb99",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#1a1a1a",
+        "activityBar.activeBorder": "#606020",
+        "activityBar.background": "#1a1a1a",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#606020",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "statusBar.background": "#000000",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#1a1a1a",
+        "titleBar.activeBackground": "#000000",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#00000099",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#03fcdb"
+    "peacock.color": "black"
 }
