--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/simpl-schema": "^1.10.4",
+    "chai": "^4.3.4",
     "typescript": "^4.2.2"
   },
   "meteor": {
